RESOLVED FIXED307862
[Scroll anchoring] Fix scroll anchoring in scaled pages
https://bugs.webkit.org/show_bug.cgi?id=307862
Summary [Scroll anchoring] Fix scroll anchoring in scaled pages
Simon Fraser (smfr)
Reported 2026-02-13 15:40:10 PST
Scroll anchoring jumps around if you've used pinch zoom on a page.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-13 15:40:16 PST
Simon Fraser (smfr)
Comment 2 2026-02-13 15:45:52 PST
EWS
Comment 3 2026-02-14 08:35:28 PST
Committed 307577@main (8b2e2e9fea0e): <https://commits.webkit.org/307577@main> Reviewed commits have been landed. Closing PR #58677 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.